Revision, added comments, changed ARN for IonQ Harmony

--- a/STARProtocol.ipynb
+++ b/STARProtocol.ipynb
@@ -434,24 +434,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(name=name)\n",
-    "backend = service.get_backend('ibm_algiers')\n",
-    "CorticalNet1Transition = quantumStateTransition(rulestxt, Tmax=1, returnCircuitOnly=True)\n",
+    "service = QiskitRuntimeService(name=name) #Login to IBMQ runtime service\n",
+    "backend = service.get_backend('ibm_algiers') #Configure the quantum device to be used\n",
+    "CorticalNet1Transition = quantumStateTransition(rulestxt, Tmax=1, returnCircuitOnly=True) #Create the circuit simulating the Boolean network to be analyzed\n",
     "\n",
     "# Here starts the Multiple Transpilation code\n",
-    "trans_qc_list = transpile([CorticalNet1Transition]*20, backend, optimization_level=3)\n",
-    "cx_count = [circ.count_ops()['cx'] for circ in trans_qc_list]\n",
-    "best_idx = np.where(cx_count == np.min(cx_count))[0][0]\n",
-    "best_qc = trans_qc_list[best_idx]\n",
-    "CorticalNet1Transition_tr = transpile(best_qc,backend,optimization_level=0)\n",
-    "# Here ends the Multiple Transpilation code\n",
+    "trans_qc_list = transpile([CorticalNet1Transition]*20, backend, optimization_level=3) #Generate 20 different transpilations for the circuit to be run\n",
+    "cx_count = [circ.count_ops()['cx'] for circ in trans_qc_list] #Count the number of CNOT gates contained in each different transpilation\n",
+    "best_idx = np.where(cx_count == np.min(cx_count))[0][0] #Pick the transpilation with the least amount of CNOT gates\n",
+    "best_qc = trans_qc_list[best_idx] #Set given transpilation to be the circuit to be run\n",
+    "CorticalNet1Transition_tr = transpile(best_qc,backend,optimization_level=0) #Create the transpiled circuit with the features evaluated above\n",
     "\n",
+    "#Run everything on the cloud platform\n",
     "with Session(service=service, backend = backend):\n",
     "    sampler = Sampler(options = Options(resilience_level=0))\n",
     "    job = sampler.run(circuits=CorticalNet1Transition_tr, shots=100)\n",
     "    result = job.result().quasi_dists[0].binary_probabilities()\n",
     "\n",
-    "print(result)\n",
+    "print(result) #Retrieve and show the results\n",
     "plot_histogram(result)"
    ]
   },
@@ -463,7 +463,7 @@
     "### Using AWS Braket to run circuits on an IonQ QPU\n",
     "Similarly to the cloud service of IBM, accessing the IonQ device requires an account with AWS Braket. The setup of this account and the associated AWS buckets is explained in the protocol.\n",
     "A state transition circuit is generated, which is manually transpiled to the set of basis gates available on the device.\n",
-    "As the result returned by the task includes measurements of all 11 qubits, the probabilities of states are summed up according to the values of the qubits of interests (representeing the 5-gene bitstring output of the state transition). The bitstring notation is also converted between the Qiskit and Braket notations."
+    "As the result returned by the task includes measurements of all 11 qubits, the probabilities of states are summed up according to the values of the qubits of interests (representing the 5-gene bitstring output of the state transition). The bitstring notation is also converted between the Qiskit and Braket notations."
    ]
   },
   {
@@ -482,7 +482,7 @@
     "my_bucket = \"amazon-braket-YOUR-BUCKET-HERE\"\n",
     "my_prefix = \"YOUR-FOLDER-NAME-HERE\"\n",
     "s3_folder = (my_bucket, my_prefix)\n",
-    "device = AwsDevice(\"arn:aws:braket:::device/qpu/ionq/ionQdevice\")"
+    "device = AwsDevice(\"arn:aws:braket:us-east-1::device/qpu/ionq/Harmony\") #previously \"arn:aws:braket:::device/qpu/ionq/ionQdevice\", IonQ has now also added a second larger QPU named Aria"
    ]
   },
   {
